Fix flickering bug on mobile tap.
I found that this issue is browser specific bug
when cursor is set to pointer there is a flickering issue.

--- a/components/courses/CourseThumbnail.module.css
+++ b/components/courses/CourseThumbnail.module.css
@@ -3,12 +3,7 @@
   padding: 1.5rem 1rem;
   position: relative;
   text-align: center;
-}
-
-.container::after {
-  content: '';
-  clear: both;
-  display: table;
+  caret-color: transparent;
 }
 
 .container:hover {
