--- a/components/courses/Courses.module.css
+++ b/components/courses/Courses.module.css
@@ -1,5 +1,4 @@
 .container {
-  cursor: pointer;
   display: grid;
   gap: 1rem;
   margin-top: 1.5rem;
